solved overlapping issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,5 +27,6 @@
 }
 
 .word-tree-container {
-    // display: flex;
+    display: flex;
+    align-items: center;
 }
